--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -2,5 +2,9 @@
 
 .home{
   background-color: $custom-purple;
-  height: calc(100% - 70px);
+  height: calc(100% - 0px);
+}
+
+#title{
+  text-align: justify;
 }
