--- a/src/styles/_custom_colors.scss
+++ b/src/styles/_custom_colors.scss
@@ -1,3 +1,3 @@
-$custom-purple: #694ED8 !default;
-$custom-purple-darker: #6600CC !default;
+$custom-purple: rgb(25, 6, 99) !default;
+$custom-purple-darker: rgb(8, 12, 245) !default;
 $custom-grey: #f3f3f3;
